objects/Mkt_Product_localization__c.object
<CustomObject>
    <description>Created as a  part of DPS-18898</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Created as a part of DPS - 18898</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Language_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a part of DPS - 18898</description>
        <label>Language Id</label>
        <referenceTo>Mkt_Language_Master__c</referenceTo>
        <relationshipLabel>Product Localizations</relationshipLabel>
        <relationshipName>Product_Localizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a part of DPS - 18898</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Localizations</relationshipLabel>
        <relationshipName>Product_Localization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Txnmy_Item_local_Mdesc__c</fullName>
        <description>Created as a part of DPS -18898</description>
        <label>Taxonomy Item Local Mdesc</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Txnmy_Item_local_Mtitle__c</fullName>
        <description>Created as a part of DPS - 18898</description>
        <label>Taxonomy Item Local Mtitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Txnmy_Item_local_Name__c</fullName>
        <description>Created as a part of DPS - 18898</description>
        <label>Taxonomy Item Local Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Txnmy_Item_local_URL__c</fullName>
        <description>Created as a part of DPS - 18898</description>
        <label>Taxonomy Item Local URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Txnmy_Item_local_priority__c</fullName>
        <description>Created as a part of DPS - 18898</description>
        <label>Taxonomy Item Local Priroty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Txnmy_Item_local_revenue__c</fullName>
        <description>Created as a part of DPS - 18898</description>
        <label>Taxonomy Item Local Revenue</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Product Localization</label>
    <nameField>
        <label>Product Localization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Localizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>